# salon-bot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  compose.yml  conftest.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_employees.py  0002_create_services_employee_services_appointments.py  0003_create_employee_services.py  0004_create_appointments.py  0005_create_chat.py  0005_create_customers.py  0006_create_conversations.py
app/: config.py  db.py  logging.py  main.py
app/api/: appointments.py  availability.py  customers.py  employee_services.py  employees.py  services.py
app/chat/: __init__.py  api.py  bootstrap.py  deps.py  orchestration.py  schemas.py  service.py  whatsapp_api.py  whatsapp_client.py  whatsapp_processor.py  whatsapp_queue.py  whatsapp_schemas.py
app/chat/agent/: __init__.py  graph.py  message_repair.py  prompts.py  protocols.py  runner.py  runtime.py  state.py  tools.py
app/chat/models/: __init__.py  conversation.py  message.py
app/models/: __init__.py  appointment.py  customer.py  employee.py  employee_service.py  service.py
app/schemas/: appointment.py  availability.py  customer.py  employee.py  employee_service.py  service.py  summary.py
app/services/: appointments.py  availability.py  availability_service.py  datetime_utils.py  salon_availability.py
docs/: AGENT_RUNTIME.md  API.md  ARCHITECTURE.md  DATABASE.md  DATES.md  QUEUES.md  RECOMMENDATIONS.md  TESTING.md
scripts/: init-test-db.sh
tests/: conftest.py  test_appointments.py  test_availability.py  test_config.py  test_customers.py  test_datetime_utils.py  test_employee_services.py  test_employees.py  test_services.py
tests/chat/: conftest.py  test_boundaries.py  test_chat_api.py  test_chat_model_factory.py  test_chat_tools_orchestration.py  test_lifespan.py  test_message_repair.py  test_runner.py  test_service.py  test_whatsapp_api.py  test_whatsapp_processor.py  test_whatsapp_schemas.py
typings/bullmq/: __init__.pyi  job.pyi
